<resources>
    <string name="app_name">mDev IMS</string>
    <string name="title_activity_login">लगइन गर्नुहोस</string>
    <string name="prompt_email">ईमेल</string>
    <string name="prompt_password">पासवर्ड</string>
    <string name="action_sign_in">लगइन गर्नुहोस/दर्ता गर्नुहोस </string>
    <string name="action_sign_in_short">लगइन गर्नुहोस</string>
    <string name="error_invalid_email">ईमेल मिलेन</string>
    <string name="error_invalid_password">पासवर्ड छोटो भयो</string>
    <string name="error_incorrect_password">पासवर्ड मिलेन</string>
    <string name="error_field_required">अनिवार्य हाल्नुहोस</string>
    <string name="permission_rationale">"ईमेल पूर्णीकरण प्रदान गर्नका लागि सम्पर्क अनुमति आवश्यक छ।"
    </string>
    <string name="title_activity_products">सामानहरु</string>
    <string name="title_home">गृह</string>
    <string name="title_dashboard">गृहपृष्ठ</string>
    <string name="title_notifications">सुचनाहरु</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">खोल्नुहोस</string>
    <string name="navigation_drawer_close">बन्द गर्नुहोस</string>
    <string name="action_settings">सेटिङ</string>
    <string name="open">खोल्नुहोस</string>
    <string name="close">बन्द गर्नुहोस</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_products_str_resource">सामानहरु खोज्नुहोस</string>
    <string name="button_confirm_str_resource">यकिन गर्नुहोस्</string>
    <string name="button_proceed_str_resource">सेव </string>
    <string name="spin_select_products_str_resource">सामानहरु छान्नुहोस</string>
    <string name="products_string">सामानहरु</string>
    <string name="successful_string">कार्य सफल भयो ।</string>
    <string name="name_string">नाम</string>
    <string name="qnty_string">मात्रा</string>
    <string name="email_string">ईमेल</string>
    <string name="password_string">पासवर्ड</string>
    <string name="request_code_string">कोड अनुरोध</string>
    <string name="cust_billing_info_string">ग्राहक बिल्लिङ विवरण</string>
    <string name="description_string">विवरण</string>
    <string name="selling_string">बेच्ने मुल्य</string>
    <string name="QNT_string">मात्रा</string>
    <string name="total_string">कुल जम्मा</string>
    <string name="sub_total_string">जम्मा:</string>
    <string name="discount_string">छुट %:</string>
    <string name="grand_total_string">कुल जम्मा:</string>
    <string name="payment_method_string">भुक्तानी किसिम</string>
    <string name="cheque_no_string">चेक नम्बर:</string>
    <string name="cheque_date_string">चेक मिती:</string>
    <string name="drawee_bank_string">चेक खिचिएको संस्था :</string>
    <string name="payment_ref">अन्य विवरण</string>
    <string name="received_amount">बुझिलिएको रकम:</string>
    <string name="note_string">नोट:</string>
    <string name="year_month_day">YYYY-MM-DD</string>
    <string name="next_string">अर्को</string>
    <string name="order_no">बिल नं:</string>
    <string name="rate_string">दर</string>
    <string name="tax_string">कर</string>
    <string name="exit_string">बन्द गर्नुहोस्</string>
    <string name="sync_now_string">Sync गर्नुहोस</string>
    <string name="offline_mode_string">अफलाइन मोड</string>
    <string name="invoice_no_string">बिजक नं</string>
    <string name="new_password_string">नयाँ पासवर्ड</string>
    <string name="code_string">कोड</string>
    <string name="validate_string">मान्य</string>
    <string name="update_details_string">सच्याउनुहोस</string>
    <string name="phone_number_string">फोन नं</string>
    <string name="address_string">ठेगाना</string>
    <string name="enter_cust_details">ग्राहकको विवरण हाल्नुहोस</string>
    <string name="add_string">थप्नुहोस</string>
    <string name="amount_string">रकम</string>
    <string name="batch_string">ब्याच</string>
    <string name="price_string">दर</string>
    <string name="cust_name_string">ग्राहकको नाम:</string>
    <string name="cust_string">ग्राहक</string>
    <string name="retrun_products_string">फिर्ता गरिएको सामानको विवरण</string>
    <string name="assign_products_string">पाएको सामानको विवरण</string>
    <string name="see_all_string">सबै हेर्नुहोस</string>
    <string name="email_address_string">ईमेल</string>
    <string name="send_reset_code_string">कोड पठाउनु</string>
    <string name="edit_profile_string">सच्याउनुहोस</string>
    <string name="old_password_string">पुरानो पासवर्ड</string>
    <string name="log_in_string">लगइन </string>
    <string name="forgot_password_string">पासवर्ड बिर्सनुभयो ?</string>
    <string name="home_string">गृह</string>
    <string name="new_order_string">बिल काट्नु</string>
    <string name="manage_order_string">बिल हेर्नुs</string>
    <string name="order_string">बिल विवरण</string>
    <string name="customers_string">ग्राहक</string>
    <string name="request_products_string">सामान मगाउनुहोस </string>
    <string name="invoice_string">बिजक</string>
    <string name="log_out_string">लगआउट</string>
    <string name="product_string">सामान</string>
    <string name="no_internet_connection_string">ईन्टरनेट कनेक्ट भएन!</string>
    <string name="error_com_server_string">सर्वर कनेक्ट भएन !</string>
    <string name="requested_products_string">सामान मगाउनु होस</string>
    <string name="something_went_string">कार्य असफल भयो । फेरी पर्‍यास गर्नुहोस !</string>
    <string name="products_small_string">सामान</string>
    <string name="status_string">स्थिती</string>
    <string name="ordered_quantity">मगाएको मात्रा</string>
    <string name="received_quanity">पाएको मात्रा </string>
    <string name="request_success_sent_string">सामान मगाउन सफल भयो!</string>
    <string name="invalid_qnty_string">मात्रा मिलेन!</string>
    <string name="no_prods_string">सामान भेटिएन!</string>
    <string name="prod_alrea_added_string">सामान थप गरिसकिएको छ !</string>
    <string name="fields_cant_string">खाली हुनु भएन !</string>
    <string name="prof_success_updated_string">प्रोफाइल अपडेट भयो!</string>
    <string name="product_small_string">सामान</string>
    <string name="incor_user_or_pass_string">विवरण मिलेन!</string>
    <string name="payment_by_string">भुक्तानी गर्ने</string>
    <string name="enter_comp_check">पूर्ण चेक विवरण हाल्नुहोस!</string>
    <string name="enter_recei_amount">बुझिलिएको रकम!</string>
    <string name="enter_vali_percent">प्रतिशत हालेको मिलेन!</string>
    <string name="succ_invoice_num">सफल । बिजक नं :</string>
    <string name="invali_cust_string">ग्राहक मिलेन!</string>
    <string name="qnt_cant_great_stock">मात्रा धेरै भयो </string>
    <string name="no_data_string">विवरण भेटिएन !</string>
    <string name="no_cust_data_string">ग्राहक भेटिएन!</string>
    <string name="date_string">मिती</string>
    <string name="no_off_orders">अफलाइन अर्डरहरू छैनन्!</string>
    <string name="wish_enter_off">के तपाईं अफलाइन मोड मा जान चाहनुहुन्छ?</string>
    <string name="incor_user_or_pass">विवरण मिलेन</string>
    <string name="invo_date_string">बिजक मिती</string>
    <string name="INVOICE_string">बिजक</string>
    <string name="reset_sent_string">कोड तपाईंको ईमेलमा पठाइयो । ईमेल हेर्नुहोस । </string>
    <string name="update_success_string">सच्याउनु सफल भयो</string>
    <string name="product_invoice_order_string">सामान</string>
   <string name="order_detail_string">बिल विवरण</string>
   <string name="amount_returned_string">फिर्ता भएको राशि</string>
   <string name="confirm_string">पुष्टि गर्नुहोस्</string>
   <string name="select_products_string">सामान चयन गर्नुहोस्</string>
   <string name="orders_string">बिल विवरण</string>
   <string name="returned_products_string">िर्ता गरिएको सामान</string>
   <string name="returnable_products_string">सामान फर्काउनुहोस्</string>
   <string name="add_customer_string">ग्राहक थप गर्नुहोस्</string>
   <string name="profile_string">प्रोफाइल</string>
</resources>