<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/order_product_spinner_order"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_spinner_layout"
            app:hintText="@string/spin_select_products_str_resource" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/layout_rounded">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/products_string"
                android:layout_marginLeft="16dp"
                android:textColor="@color/greyishBlack"
                android:textSize="18sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:background="@color/greyishBlack" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/grey_200"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name_string"
                    android:textSize="18sp"
                    android:paddingLeft="8dp"
                    android:layout_weight="0.4"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/batch_string"
                    android:paddingLeft="4dp"
                    android:textAlignment="textStart"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:paddingBottom="8dp"
                    android:paddingLeft="4dp"
                    android:paddingTop="8dp"
                    android:text="@string/price_string"
                    android:textAlignment="center"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    />

            </LinearLayout>

            <ListView
                android:id="@+id/custom_order_product_list_view_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"></ListView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/greyishBlack" />

            <TextView
                android:id="@+id/custom_order_updated_total_amount_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/total_string"
                android:textAlignment="textEnd"
                android:textColor="@color/greyishBlack"
                android:textSize="18sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/greyishBlack" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal"
                android:weightSum="1"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.6"
                    android:paddingLeft="8dp"
                    android:text="@string/cust_name_string"
                    android:textColor="@color/greyishBlack"
                    android:textSize="18sp" />

                <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                    android:id="@+id/customer_spinner_order_spinner"
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="0.4"
                    android:background="@drawable/customer_spinner_background"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/custom_order_update_order_proceed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_34sdp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/buttons_rounded_corners_darker"
                android:text="@string/button_proceed_str_resource"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>