<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_400sdp"
        android:orientation="vertical"
        android:weightSum="1"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:background="@color/greyishBlack"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8"
                app:srcCompat="@drawable/customer_stock_flat" />
<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/white"
    />
            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/enter_cust_details"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:background="@color/grey_400"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:orientation="vertical"
                    android:weightSum="4"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/customer_add_button"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:background="@drawable/buttons_rounded_corners"
                        android:text="@string/add_string"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/customer_add_name"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_text_edit"
                        android:ems="10"
                        android:hint="@string/name_string"
                        android:inputType="textPersonName"
                        android:textAlignment="center"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/customer_add_button" />

                    <EditText
                        android:id="@+id/customer_add_address"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_text_edit"
                        android:ems="10"
                        android:hint="@string/address_string"
                        android:inputType="textPersonName"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/customer_phone_add" />

                    <EditText
                        android:id="@+id/customer_phone_add"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_text_edit"
                        android:ems="10"
                        android:hint="@string/phone_number_string"
                        android:inputType="number"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/customer_add_name" />

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar_customer_add"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/greyishBlack"
                    android:max="100"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.49" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>